<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>orgpackage</groupId>
	<artifactId>clone-me</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>

	<properties>
		<datarouter-version>0.0.83</datarouter-version>
		<log4j-version>2.13.3</log4j-version>
	</properties>

	<build>
		<finalName>clone-me</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>12</source>
					<target>12</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>2.2.6</version>
				<executions>
					<execution>
						<phase>none</phase>
					</execution>
				</executions>
				<configuration>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<useNativeGit>true</useNativeGit>
					<skip>true</skip>
			</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.datarouter</groupId>
			<artifactId>datarouter-mysql</artifactId>
			<version>${datarouter-version}</version>
		</dependency>
		<dependency>
			<groupId>io.datarouter</groupId>
			<artifactId>datarouter-virtual-node</artifactId>
			<version>${datarouter-version}</version>
		</dependency>
		<dependency>
			<groupId>io.datarouter</groupId>
			<artifactId>datarouter-conveyor</artifactId>
			<version>${datarouter-version}</version>
		</dependency>
		<dependency>
			<groupId>io.datarouter</groupId>
			<artifactId>datarouter-job</artifactId>
			<version>${datarouter-version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-web</artifactId>
			<version>${log4j-version}</version>
		</dependency>
		<dependency>
			<groupId>io.datarouter</groupId>
			<artifactId>datarouter-testng</artifactId>
			<version>${datarouter-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
